# SharedTexture

./: LICENSE  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/me/robot9/shared/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/me/robot9/shared/: IOffscreenInterface.aidl
app/src/main/java/me/robot9/shared/: EGLCore.java  MainActivity.java  OffscreenService.java  OnscreenRenderView.java  QuadRenderer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/me/robot9/shared/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
shared/: build.gradle
shared/src/androidTest/java/me/robot9/shared/: ExampleInstrumentedTest.java
shared/src/main/cpp/: CMakeLists.txt  JSharedTexture.cpp  JniLog.h  SharedTexture.cpp  SharedTexture.h
shared/src/main/java/me/robot9/shared/: SharedTexture.java
